turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:14: error: wrong number of type arguments for Array, should be 1
var rule:Array[Array[Array[Int], Array[Int], Array[Int]]] = Array(Array(Array((1, RIGHT , 1), (0, LEFT  , 0)), Array((1, RIGHT , 2), (0, NOTURN, 0)), Array((1, LEFT  , 0), (0, LEFT  , 0)))) // Change this
               ^